k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fcs-bff-service
  namespace: fcs-bff
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fcs-bff
  ports:
    - name: http
      port: 8080
      targetPort: http
